# usb2asd

./: CMakeLists.txt  README.md  run_with_xvfb.sh
.github/workflows/: windows-build.yml
src/: AutoKeypress.cpp  AutoKeypress.h  Colors.h  KeypressCommands.cpp  KeypressCommands.h  MainWindow.cpp  MainWindow.h  MockSerialCommunication.cpp  MockSerialCommunication.h  SerialCommunication.cpp  SerialCommunication.h  SetPriceDialog.cpp  SetPriceDialog.h  main.cpp
